--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,42 @@
   </head>
 
   <body>
+    <header>   
+    <h1>Bookers</h1>
     <% if user_signed_in? %>
+    <!--ログイン中-->
     <li>
-      <%= link_to"ログアウト",destroy_user_session_path, method: :delete %>
+      <%= link_to"Home", root_path %>
+    </li>
+    <li>
+      <%= link_to"Users", home_about_path %>
+      <!--ユーザ一覧作成してからルートパス変更する-->
+    </li>
+    <li>
+      <%= link_to "Books", books_path %>
+      <!--投稿一覧-->
+    </li>
+    <li>
+      <%= link_to"logout",destroy_user_session_path, method: :delete %>
     </li>
     <% else %>
+
+    <!--ログアウト中↓-->
     <li>
-      <%= link_to "新規登録", new_user_registration_path %>
+      <%= link_to"Home", root_path %>
     </li>
     <li>
-      <%= link_to"ログイン", new_user_session_path%>
+      <%= link_to"About", home_about_path %>
+    </li>
+    <li>
+      <%= link_to "sign up", new_user_registration_path %>
+    </li>
+    <li>
+      <%= link_to "login", new_user_session_path%>
     </li>
     <% end %>
+    </header>
+
     
     <%= yield %>
   </body>
