--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
+<!--ユーザ詳細画面-->
 <h1>ユーザ詳細画面</h1>
-<%= @user.name%>
+<%= @user.name %>
+<%= @user.introduction %>
+<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" %>
+<!--NoImageは.jpegだけど.jpg-と記述するっぽい…->
