--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <%= link_to"Home", root_path %>
     </li>
     <li>
-      <%= link_to"Users", home_about_path %>
+      <%= link_to"Users", users_path %>
       <!--ユーザ一覧作成してからルートパス変更する-->
     </li>
     <li>
