--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,12 @@
     <!--ログイン中-->
     <h1>ログイン中</h1>
     <li>
-      <%= link_to"Home", root_path %>
+      <%= link_to"Home", user_path(current_user.id) %>
+      <!--user_pathでユーザ詳細へ-->
     </li>
     <li>
       <%= link_to"Users", users_path %>
-      <!--ユーザ一覧作成してからルートパス変更する-->
+      <!--ユーザ-->
     </li>
     <li>
       <%= link_to "Books", books_path %>
@@ -41,11 +42,9 @@
     </li>
     <li>
       <%= link_to"About", home_about_path %>
-      <!--ユーザ一覧作成してからルートパス変更する-->
     </li>
     <li>
       <%= link_to "sign_up", new_user_registration_path %>
-      <!--投稿一覧-->
     </li>
     <li>
       <%= link_to "login", new_user_session_path %>
@@ -58,7 +57,6 @@
     
     <footer>
       <p>CopyRight Infratop.inc</p>
-      <!--usersコントローラに表示されない…-->
     </footer>
   </body>
 </html>
