--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,33 @@
 <!--ユーザ詳細画面-->
 <h1>ユーザ詳細画面</h1>
+<!--あとで部分テンプレートする↓-->
+<h2>User info</h2>
+<h4>name</h4>
 <%= @user.name %>
+<h4>introduction</h4>
 <%= @user.introduction %>
+<div>
 <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" %>
-<!--NoImageは.jpegだけど.jpg-と記述するっぽい…->
+</div>
+<!--NoImageは.jpegだけど.jpg-と記述するっぽい…-->
+
+
+<%= link_to"編集（フォントオウサムする）", edit_user_path %>
+<!--部分テンプレートここまで-->
+
+<!--book新規投稿フォーム部分テンプレート-->
+<h1>New book</h1>
+<%= form_with model: @book, local:true do |f| %>
+<h4>Title</h4>
+<%= f.text_field :title %>
+<h4>Opinion</h4>
+<%= f.text_field :body %>
+<%= f.submit 'Create Book' %>
+<% end %>
+<!---部分テンプレートここまで-->
+
+<h1>自分が投稿したデータのみ表示</h1>
+
+<% @books.each do |book| %>
+<div><%= book.title%></div>
+<% end %>
