[11]ユーザ詳細画面に自分の投稿データのみを表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,5 +29,7 @@
 <h1>自分が投稿したデータのみ表示</h1>
 
 <% @books.each do |book| %>
-<div><%= book.title%></div>
+<div><%= book.title %></div>
+<div><%= book.body %></div>
 <% end %>
+
