[13]投稿詳細と投稿一覧に投稿ユーザの画像表示を実装、投稿者本人のみ編集と削除機能を表示

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,8 @@
 <div>title</div>
 <div>body</div>
 <% @books.each do |book| %>
-<div><%= book.title %></div>
+<div><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" %></div>
+<div><%= link_to book.title, book_path(book.id) %></div>
 <div><%= book.body %></div>
 <% end %>
 
