--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
 <h1>自分が投稿したデータのみ表示</h1>
 
 <% @books.each do |book| %>
-<div><%= book.title %></div>
+<div><%= link_to book.title, book_path(book.id) %></div>
 <div><%= book.body %></div>
 <% end %>
 
