[14]ヘッダーのレイアウト作成途中

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,3 +6,7 @@
 <%= f.text_field :body %>
 <%= f.submit 'Update Book' %>
 <% end %>
+<%= link_to "Show", book_path(@book.id) %>|
+<!--投稿詳細へ-->
+<%= link_to "Back", books_path %>
+<!--投稿一覧へ-->
