--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <!--ユーザ詳細画面-->
 <h1>ユーザ詳細画面</h1>
-<!--あとで部分テンプレートする↓-->
+<!--あとで部分テンプレートする↓ログインしている人専用-->
 <h2>User info</h2>
 <h4>name</h4>
 <%= @user.name %>
@@ -12,7 +12,8 @@
 <!--NoImageは.jpegだけど.jpg-と記述するっぽい…-->
 
 
-<%= link_to"編集（フォントオウサムする）", edit_user_path %>
+<%= link_to"編集（フォントオウサムする）", edit_user_path(current_user.id) %>
+<!--編集はログインしているユーザの編集ページのみアクセス-->
 <!--部分テンプレートここまで-->
 
 <!--book新規投稿フォーム部分テンプレート-->
