--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,8 @@
 <h1>Book detail</h1>
 <%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" %>
 <!--@book.userでこの記事の投稿者のデータを取得-->
-<%= @book.user.name %>
+<%= link_to @book.user.name, user_path(@book.user.id) %>
+<!--ユーザ名をユーザ詳細ページへのリンクにする-->
 <%= @book.title %>
 <%= @book.body %>
 
