[15]部分テンプレートの適用

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
-<!--ここをshowとindexで共有する-->
 
-<!--ここまで-->
+<!--部分テンプレート-->
+<%= render 'layouts/users_info', {book:@book , user:@user} %>
 
 <h1>ここが投稿詳細</h1>
 <h1>Book detail</h1>
