--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,13 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  
+ body{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";}
+ 
+ .nav-item{
+  letter-spacing: 2px;
+  font-size: 16px;
+  padding: 0 8px 0 8px;
+  }
+
+
