--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,7 @@
 <h1>ユーザ一覧画面</h1>
-<!--book新規投稿フォーム部分テンプレート-->
-<h1>New book</h1>
-<%= form_with model: @book, local:true do |f| %>
-<h4>Title</h4>
-<%= f.text_field :title %>
-<h4>Opinion</h4>
-<%= f.text_field :body %>
-<%= f.submit 'Create Book' %>
-<% end %>
-<!---部分テンプレートここまで-->
+
+<!--部分テンプレート-->
+<%= render 'layouts/users_info', {book:@book , user:@user} %>
 
 <h1>Users</h1>
 <% @users.each do |user| %>
