--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,14 +75,13 @@
     </div>
     <% end%>
     
-    <div class="container">
-      <%= yield %>
-    </div>
+
+    <%= yield %>
+   
     
-    
-    <footer>
+    <footer class="m-1">
       <div class="container">
-        <p>CopyRight Infratop.inc</p>
+        <p class="text-center">CopyRight Infratop.inc</p>
       </div>
     </footer>
   </body>
