--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,5 +25,15 @@
   font-size: 16px;
   padding: 0 8px 0 8px;
   }
+  
+  tr{
+   line-height: 40px;
+   border-top: solid 1px #dee2e6;
+  }
+  
+
+  th{
+   padding: 12px;
+  }
 
 
