--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,26 @@
 <!--ユーザ詳細画面-->
-<h1>ユーザ詳細画面</h1>
 <!--部分テンプレート-->
-<%= render 'layouts/users_info', {book:@book , user:@user} %>
 
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <%= render 'layouts/users_info', {book:@book , user:@user} %>
+    </div>
+    <div class="col-lg-8 offset-md-1">
+        <h1>Books</h1>
+        <table width=100%>
+            <tr>
+                <th>Title</th>
+                <th>Opinion</th>
+            </tr>
+            <tr>
+                <% @books.each do |book| %>
+                <th><%= link_to book.title, book_path(book.id) %></th>
+                <th><%= book.body %></th>
+            </tr>
+            <% end %>
+        </table>
 
-
-
-
-<h1>自分が投稿したデータのみ表示</h1>
-
-<% @books.each do |book| %>
-<div><%= link_to book.title, book_path(book.id) %></div>
-<div><%= book.body %></div>
-<% end %>
-
+    </div>
+  </div>
+</div>
