--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,16 @@
-<h1>ここがトップページ</h1>
+<!--ここがトップページ-->
+<div class="container">
+  <div class="row">
+    <div class="max-auto col-11 col-sm-10 col-lg-8 col-xl-6  ml-auto mr-auto pt-4 pb-5">
+      <h1>welcome to <span><i class="fas fa-book"></i></span><span class="font-weight-bold">Bookers</span>!!</h1>
+      <p>In <span><i class="fas fa-book"></i></span><span class="font-weight-bold">Bookers</span>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+      <a class="btn btn-info btn-block mt-3 col-10 ml-auto mr-auto" href="/users/sign_in">Log in</a>
+      <!--ログインボタン-->
+      <a class="btn btn-success btn-block mt-3 col-10 ml-auto mr-auto" href="/users/sign_up">Sign Up</a>
+      <!--サインアップボタン-->
+    </div>
 
+  </div>
+</div>
