[17]レイアウト調整

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,35 @@
-<h1>投稿内容変更画面</h1>
-<%= form_with model: @book, local:true do |f| %>
-<h4>Title</h4>
-<%= f.text_field :title %>
-<h4>Opinion</h4>
-<%= f.text_field :body %>
-<%= f.submit 'Update Book' %>
-<% end %>
-<%= link_to "Show", book_path(@book.id) %>|
-<!--投稿詳細へ-->
-<%= link_to "Back", books_path %>
-<!--投稿一覧へ-->
+<!--投稿内容変更画面-->
+
+<div class="container">
+  <div class="row">
+    <div class="max-auto col-sm-12 col-md-8 col-lg-5  ml-auto mr-auto pt-3">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book, local:true do |f| %>
+      <div class="form_group　form-group-lg">
+        <label for="book_title">Title</label>
+        <div class="pb-3">
+          <%= f.text_field :title, class:"form-control" %>
+          <!--class:"form-control"を指定しないと送信したデータが反映されない-->
+        </div>
+      </div>
+      <div class="form_group">
+        <label for="book_body">Opinion</label>
+        <div>
+          <%= f.text_area :body, class:"form-control" %>
+        </div>
+      </div>
+      <div class="pt-3 pb-3">
+      <%= f.submit "Update Book", class:"btn btn-sm btn-success p-2" %>
+      </div>
+      <% end %>
+      
+      <%= link_to "Show", book_path(@book.id) %> |
+      <!--投稿詳細へ-->
+      <%= link_to "Back", books_path %>
+      <!--投稿一覧へ-->
+
+      
+
+    </div>
+  </div>
+</div>
