--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,20 @@
 <!--<h1>ここが投稿詳細</h1>-->
 
 
-<div class="container p-3">
-    <div class="row">
-        <div class="cal-lg-3">
-            <!--部分テンプレート-->
-            <%= render 'layouts/users_info', {book:@create_book , user:@user} %>
-            <!--book:@bookだと、↓で取得する@bookの内容を受け渡してしまうので違う名前（create_book）にした-->
-        </div>
-        <div class="col-lg-8 offset-lg-1">
+<div class="container">
+  <div class="row mt-3">
+    <div class="col-lg-3">
+      <%= render 'layouts/users_info', {book:@create_book , user:@user} %>
+    </div>
+    <div class="col-lg-8 offset-md-1">
             <h2>Book detail</h2>
-            <table width=100%>
+            <!--自分が投稿者であるときのみ表示する-->
+            <% if @book.user == current_user %>
+               <table width=100%>
                 <tr>
                     <td>
-                        <a href="/users/<%= @book.user.id %>">
-                        <%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" ,size:"50x50" %></br>
+                        <a href="/users/<%= @book.user.id %>" >
+                        <%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" ,size:"40x40", class: "m-2" %></br>
                         <!--@book.userでこの記事の投稿者のデータを取得-->
                         <%= @book.user.name %>
                         </a>
@@ -26,22 +26,31 @@
                          <%= @book.body %>
                     </td>
                     <td>
-                        <!--自分が投稿者であるときのみ表示する-->
-                        <% if @book.user == current_user %>
                         <a class="btn btn-success btn-inlineblock" href="/books/<%= @book.id %>/edit ">Edit</a>
-            
-                        <a data-confirm="本当に消しますか？" class="btn btn-danger destroy_book_<%= @book.id %> rel="nofollow" date-method="delete" href="/books/<%= @book.id %> ">Destroy</a>
-                        <% end %>
+                    </td>
+                    <td width=25%>
+                        <a class="btn btn-danger destroy_book_<%= @book.id %> rel="nofollow" date-method="delete" data-confirm="本当に消しますか？" href="/books/<%= @book.id%>" ">Destroy</a>
                     </td>
                 </tr>
             </table>
-     
-
-            
-        </div>
-    </div>
-
-
-
+            <% else %>
+            <table width=100%>
+                <tr>
+                    <td width=10%>
+                        <a href="/users/<%= @book.user.id %>">
+                        <%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" ,size:"40x40" , class: "m-2"%></br>
+                        <!--@book.userでこの記事の投稿者のデータを取得-->
+                        <%= @book.user.name %>
+                        </a>
+                    </td>
+                    <td width=40%>
+                         <%= link_to @book.title, book_path(@book.id) %>
+                    </td>
+                    <td width=50%>
+                         <%= @book.body %>
+                    </td>
+                </tr>
+            </table>
+            <% end %>
 
 </div>
