--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <!--ここがトップページ-->
 <div class="container">
   <div class="row">
-    <div class="max-auto col-11 col-sm-10 col-lg-8 col-xl-6  ml-auto mr-auto pt-4 pb-5">
+    <div class="max-auto col-11 col-sm-10 col-lg-8 col-xl-6  ml-auto mr-auto pt-4">
       <h1>welcome to <span><i class="fas fa-book"></i></span><span class="font-weight-bold">Bookers</span>!!</h1>
       <p>In <span><i class="fas fa-book"></i></span><span class="font-weight-bold">Bookers</span>,</p>
       <p>you can share and exchange your opinions , inpressions , and emotions</p>
