--- a/app/views/layouts/_users_info.html.erb
+++ b/app/views/layouts/_users_info.html.erb
@@ -19,7 +19,7 @@
         </table>
         
         <div class="row">
-            <a class="btn btn-outline-secondary btn-block mt-3" href="/users "><span><i class="fas fa-user-cog"></i></span></a>
+            <a class="btn btn-outline-secondary btn-block mt-5" href="/users/<%= current_user.id%>/edit "><span><i class="fas fa-user-cog"></i></span></a>
             <!--編集はログインしているユーザの編集ページのみアクセス-->
         </div>
         
