--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,16 +1,38 @@
-<!--部分テンプレート-->
-<%= render 'layouts/users_info', {book:@book , user:@user} %>
+<!--全ユーザの投稿一覧画面-->
+<div class="container">
+  <div class="row mt-3">
+    <div class="col-lg-3">
+      <!--部分テンプレート-->
+      <%= render 'layouts/users_info', {book:@book , user:@user} %>
+    </div>
+    <div class="col-lg-8 offset-md-1">
+      <h2>Books</h2>
+      <table width=100%>
+        <tr>
+          <th width=10%></th>
+          <th width=30%>Title</th>
+          <th width=60%>Opinion</th>
+        </tr>
+        <tr>
+          <% @books.each do |book| %>
+          <th>
+            <a href="/users/<%= book.user.id %>">
+              <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" ,size:"40x40" %>
+              <!--@book.userでこの記事の投稿者のデータを取得-->
+              <!--投稿者の画像を投稿者詳細へのリンクにする…-->
+            </a>
+          </th>
+          <th><%= link_to book.title, book_path(book.id) %></th>
+          <th><%= book.body %></th>
+          </tr>
+          <% end %>
+      </table>
+
+    </div>
+  </div>
+</div>
 
 
 
-<h1>全ユーザの投稿一覧画面</h1>
-<siv>左にユーザ情報</siv>
-<div>右に投稿一覧</div>
-<div>title</div>
-<div>body</div>
-<% @books.each do |book| %>
-<div><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg" %></div>
-<div><%= link_to book.title, book_path(book.id) %></div>
-<div><%= book.body %></div>
-<% end %>
+
 
