--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,9 +80,9 @@
     <%= yield %>
    
     
-    <footer class="m-1">
+    <footer>
       <div class="container">
-        <p class="text-center">CopyRight Infratop.inc</p>
+        <p class="text-center mt-5">CopyRight Infratop.inc</p>
       </div>
     </footer>
   </body>
