--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,12 @@
 <!--ユーザ一覧画面-->
-
 <div class="container">
-    <div class="row">
-        <div class="cal-lg-3">
-            <!--部分テンプレート-->
-            <%= render 'layouts/users_info', {book:@book , user:@user} %>
-        </div>
-        <div class="col-lg-8 offset-md-1">
-          <h1>Users</h1>
-          <table width=100%>
+  <div class="row mt-3">
+    <div class="col-lg-3">
+      <%= render 'layouts/users_info', {book:@book , user:@user} %>
+    </div>
+    <div class="col-lg-8 offset-md-1">
+        <h1>Users</h1>
+        <table width=100%>
             <tr>
                 <th>image</th>
                 <th>name</th>
