--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,9 +6,9 @@
       <p>In <span><i class="fas fa-book"></i></span><span class="font-weight-bold">Bookers</span>,</p>
       <p>you can share and exchange your opinions , inpressions , and emotions</p>
       <p>about various books!</p>
-      <a class="btn btn-info btn-block mt-3 col-10 ml-auto mr-auto" href="/users/sign_in">Log in</a>
+      <a class="btn btn-info btn-block mt-3 col-10 ml-auto mr-auto py-1" href="/users/sign_in">Log in</a>
       <!--ログインボタン-->
-      <a class="btn btn-success btn-block mt-3 col-10 ml-auto mr-auto" href="/users/sign_up">Sign Up</a>
+      <a class="btn btn-success btn-block mt-3 col-10 ml-auto mr-auto py-1" href="/users/sign_up">Sign Up</a>
       <!--サインアップボタン-->
     </div>
 
