--- a/app/views/layouts/_users_info.html.erb
+++ b/app/views/layouts/_users_info.html.erb
@@ -27,9 +27,21 @@
         <h2 class="mt-3">New book</h2>
         <%= form_with model: book, local:true do |f| %>
         <!--@bookをbookに変更-->
-        <p>Title</p>
-        <div><%= f.text_field :title %></div>
-        <p>Opinion</p>
-        <div><%= f.text_area :body %></div>
-        <div><%= f.submit 'Create Book',class:"btn btn-success mt-4" %></div>
+        <div class="form-group">
+            <label for="book_title">Title</label>
+            <div>
+                <%= f.text_field :title, class:"form-control" %>
+                <!--class:"form-control"を指定しないと送信したデータが反映されない-->
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="book_body">Opinion</label>
+            <div>
+                <%= f.text_area :body, class:"form-control" %>
+                <!--class:"form-control"を指定しないと送信したデータが反映されない-->
+            </div>
+        </div>
+        
+ 
+        <div><%= f.submit 'Create Book',class:"btn btn-success mt-2" %></div>
         <% end %>
