--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,19 @@
 <!--全ユーザの投稿一覧画面-->
 <div class="container">
+  <!--エラーメッセージ-->
+  <% if @book.errors.any? %>
+  <div class="error_explanation">
+    <h3 class="pt-4 error_explanation"><%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li class="error_explanation"><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
+  <!--エラーメッセージここまで-->
   <div class="row mt-3">
+    
     <div class="col-lg-3">
       <!--部分テンプレート-->
       <%= render 'layouts/users_info', {book:@book , user:@user} %>
