--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,9 @@
-<h2>Sign up</h2>
+<!--ユーザ登録画面-->
 
-<%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-<!--form_forから変更した-->
+<div class="container pt-4">
+  <h2>Sign up</h2>
+  <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+  <!--form_forから変更した-->
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
@@ -28,8 +30,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" ,class:"btn btn-success mt-2 mb-3 p-1" %>
   </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+
+</div>
