--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,12 +1,17 @@
+<!--エラーメッセージの部分テンプレート-->
+
+
 <% if resource.errors.any? %>
   <div id="error_explanation">
-    <h2>
+    <!--エラーメッセージの文字色を赤くするためにerror_explanationを追加-->
+    <h2 class="error_explanation">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul>
+    <ul class="error_explanation">
+      <!--エラーメッセージの文字を赤くするためにerror_explanationを-->
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
