--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,18 @@
   <div class="row">
     <div class="max-auto col-sm-12 col-md-8 col-lg-5  ml-auto mr-auto pt-3">
       <h1>Editing Book</h1>
+        <!--エラーメッセージ-->
+        <% if @book.errors.any? %>
+          <div class="error_explanation">
+          <h3 class="pt-4 error_explanation"><%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:</h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+            <li class="error_explanation"><%= message %></li>
+            <% end %>
+          </ul>
+          </div>
+        <% end %>
+        <!--エラーメッセージここまで-->
       <%= form_with model: @book, local:true do |f| %>
       <div class="form-group">
         <label for="book_title">Title</label>
