--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,18 @@
   <div class="row">
     <div class="max-auto col-sm-12 col-md-8 col-lg-5  ml-auto mr-auto pt-3">
       <h2>User info</h2>
+        <!--エラーメッセージ-->
+        <% if @user.errors.any? %>
+        <div class="error_explanation">
+          <h3 class="pt-4 error_explanation"><%= pluralize(@user.errors.count,"error") %> prohibited this obj from being saved:</h3>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+            <li class="error_explanation"><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+        <% end %>
+        <!--エラーメッセージここまで-->
       <%= form_with model: @user,local:true do |f| %>
       <!--送信先のURLいる？-->
       <div class="form-group">
