--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
               <a class="text-white" href="/home/about"><span><i class="fas fa-link"></i></span>About</a>
             </li>
             <li class="nav-item">
-              <a class="text-white" href="/users/sign_up"><span><i class="fas fa-user-plus"></i></span>sign_up</a>
+              <a class="text-white" href="/users/sign_up"><span><i class="fas fa-user-plus"></i></span>sign up</a>
             </li>
             <li class="nav-item">
               <a class="text-white" href="/users/sign_in"><span><i class="fas fa-sign-in-alt"></i></span>login</a>
