--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,11 +14,11 @@
   <!--エラーメッセージここまで-->
   <div class="row mt-3">
     
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <!--部分テンプレート-->
       <%= render 'layouts/users_info', {book:@book , user:@user} %>
     </div>
-    <div class="col-lg-8 offset-md-1">
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table width=100%>
         <tr>
