--- a/app/views/layouts/_users_info.html.erb
+++ b/app/views/layouts/_users_info.html.erb
@@ -19,8 +19,10 @@
         </table>
         
         <div class="row">
-            <a class="btn btn-outline-secondary btn-block mt-5" href="/users/<%= current_user.id%>/edit "><span><i class="fas fa-user-cog"></i></span></a>
-            <!--編集はログインしているユーザの編集ページのみアクセス-->
+            <%= link_to edit_user_path(user.id) ,class:"btn btn-outline-secondary btn-block mt-5", method: :get do %>
+            <i class="fas fa-user-cog"></i>
+            <% end %>
+            <!--編集はログインしているユーザの編集ページのみアクセス可能-->
         </div>
         
         <!--新規投稿フォームテンプレート-->
