--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <!--ユーザ一覧画面-->
 <div class="container">
   <div class="row mt-3">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'layouts/users_info', {book:@book , user:@user} %>
     </div>
-    <div class="col-lg-8 offset-md-1">
+    <div class="col-md-8 offset-md-1">
         <h1>Users</h1>
         <table width=100%>
             <tr>
@@ -16,7 +16,7 @@
                 <% @users.each do |user| %>
                 <th><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "NoImage.jpg", size: "50x50" %></th>
                 <th><%= user.name %></th>
-                <th><%= link_to "show", user_path(user.id) %></th>
+                <th><%= link_to "Show", user_path(user.id) %></th>
             </tr>
             <% end %>
         </table>
