--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,11 @@
 <!--ユーザ詳細画面-->
-<!--部分テンプレート-->
 
 <div class="container">
   <div class="row mt-3">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'layouts/users_info', {book:@book , user:@user} %>
     </div>
-    <div class="col-lg-8 offset-md-1">
+    <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
         <table width=100%>
             <tr>
